Rework of directories and scripts added